[package]
name = "to-do-list-json-rpc-back-actix-web-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
